--- a/algorithm/requirements.txt
+++ b/algorithm/requirements.txt
@@ -1,20 +1,2 @@
-git+https://github.com/NVIDIA/dllogger
-# python2.x / python 3.x
-requests
-pyyaml
-toposort == 1.5
-contextlib2
-matplotlib==3.3.2
-numpy==1.17.0
-pycocotools==2.0.2
-Pillow
-tqdm == 4.19.5
-easydict == 1.7
-setproctitle == 1.1.10
-opencv-python == 3.4.0.12;python_version<"3.7"
-
-# python 2.x
-Polygon2 == 2.0.8;python_version<"3"
-# python 3.7
-opencv-python == 3.4.2.17;python_version=="3.7"
-Polygon3 == 3.0.8;python_version>"3"
+pandas
+opencv-python
